@@ -17,6 +17,7 @@
 
 package org.keycloak.models.sessions.infinispan;
 
+import org.jboss.logging.Logger;
 import org.keycloak.common.util.MultiSiteUtils;
 import org.keycloak.models.AuthenticatedClientSessionModel;
 import org.keycloak.models.ClientModel;
@@ -43,12 +44,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
  */
 public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvider> implements UserSessionModel {
+
+    private static final Logger logger = Logger.getLogger(UserSessionAdapter.class);
 
     private final KeycloakSession session;
 
@@ -120,6 +122,8 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         final UUID clientSessionId = clientSessionEntities.get(clientUUID);
 
         if (clientSessionId == null) {
+            logger.debugf("Client to client session mapping not found. userSessionId=%s, clientId=%s, offline=%s, mappings=%s",
+                    getId(), clientUUID, offline, clientSessionEntities);
             return null;
         }
 
@@ -128,9 +132,11 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         if (client != null) {
             // Might return null either the client session has expired, or it hasn't been added by a concurrently running login yet.
             // So it is unsafe to clear it, so we need to keep it for now. Otherwise, the test ConcurrentLoginTest.concurrentLoginSingleUser will fail.
-            return provider.getClientSession(this, client, clientSessionId, offline);
+            return provider.getClientSession(this, client, clientSessionId.toString(), offline);
         }
 
+        logger.debugf("Client not found. Removing from mappings. userSessionId=%s, clientId=%s, clientSessionId=%s, offline=%s",
+                getId(), clientUUID, clientSessionId, offline);
         removeAuthenticatedClientSessions(Collections.singleton(clientUUID));
         return null;
     }
@@ -140,13 +146,14 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         if (removedClientUUIDS == null || removedClientUUIDS.isEmpty()) {
             return;
         }
+        logger.debugf("Removing client sessions. clients=%s, offline=%s", removedClientUUIDS, offline);
 
         // do not iterate the removedClientUUIDS and remove the clientSession directly as the addTask can manipulate
         // the collection being iterated, and that can lead to unpredictable behaviour (e.g. NPE)
         List<UUID> clientSessionUuids = removedClientUUIDS.stream()
                 .map(entity.getAuthenticatedClientSessions()::get)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         // Update user session
         UserSessionUpdateTask task = new UserSessionUpdateTask() {
@@ -363,6 +370,10 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     @Override
     public void restartSession(RealmModel realm, UserModel user, String loginUsername, String ipAddress, String authMethod, boolean rememberMe, String brokerSessionId, String brokerUserId) {
+        // Sending a delete statement for each client session may have a performance impact.
+        // The update task will clear the entity.getAuthenticatedClientSessions().
+        entity.getAuthenticatedClientSessions()
+                .forEach((ignored, clientSessionId) -> this.clientSessionUpdateTx.addTask(clientSessionId, Tasks.removeSync(offline)));
         UserSessionUpdateTask task = new UserSessionUpdateTask() {
 
             @Override
